--- a/frontend-service.yaml
+++ b/frontend-service.yaml
@@ -10,8 +10,7 @@ metadata:
   name: frontend
 spec:
   ports:
-    - name: "5902"
-      port: 5902
+    - port: 80
       targetPort: 80
   selector:
     io.kompose.service: frontend
